fixed: overflow-y-hidden within HorizentialCarScroll

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -10,7 +10,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 1px;
+  width: 3px;
   height: 0px;
 }
 
